--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "html5-qrcode",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "devDependencies": {
+    "@types/node": "^10.5.4",
     "grunt": "~0.4.5",
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-uglify": "~0.9.1",
@@ -21,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/dwa012/html5-qrcode/issues"
   },
-  "homepage": "https://github.com/dwa012/html5-qrcode"
+  "homepage": "https://github.com/dwa012/html5-qrcode",
+  "dependencies": {
+    "electron": "^1.8.7"
+  }
 }
