--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "html5-qrcode",
+  "name": "ro-food-service-provider",
+  "productName": "ROMUN Food Service Provider",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
@@ -8,22 +9,19 @@
     "grunt": "~0.4.5",
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-uglify": "~0.9.1",
-    "grunt-contrib-watch": "~0.6.1"
+    "grunt-contrib-watch": "~0.6.1",
+    "electron": "^1.8.7"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "exit 0"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/dwa012/html5-qrcode.git"
   },
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/dwa012/html5-qrcode/issues"
-  },
-  "homepage": "https://github.com/dwa012/html5-qrcode",
+  "license": "GPLv3",
   "dependencies": {
-    "electron": "^1.8.7"
+    "node-pinyin": "^0.2.3"
   }
 }
